@@ -1,3 +1,8 @@
+2007-01-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* elf.c (assign_file_positions_for_load_sections): We can
+	require fewer phdrs than expected.
+
 2007-01-08  Kazu Hirata  <kazu@codesourcery.com>
 
 	* archures.c (bfd_mach_cpu32_fido): Rename to bfd_mach_fido.
